--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "pretty-bytes": "^5.6.0",
+    "querystring-es3": "^0.2.1",
     "rc-slider": "^9.7.5",
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.5",
@@ -90,8 +91,8 @@
     "sass": "~1.32.13",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.72.1",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^3.11.3"
+    "webpack-dev-server": "^4.9.2"
   }
 }
