--- a/webpack.config.js.dist
+++ b/webpack.config.js.dist
@@ -7,21 +7,23 @@ const MiniCssExtractPlugin = require('mini-css-extract-plugin');
 const ProvidePlugin = require('process');
 
 module.exports = {
-  output: {
-    path: path.join(__dirname, '/dist'),
-    filename: 'js/index.bundle.js',
-    publicPath: ROOT_PATH
-  },
   devServer: {
     port: 8080,
-    contentBase: './dist',
-    publicPath: ROOT_PATH,
+    static: './dist',
     historyApiFallback: {
       disableDotRule: true,
       index: ROOT_PATH
     }
   },
-  devtool: "source-map",
+  output: {
+    path: path.join(__dirname, '/dist'),
+    filename: 'js/index.bundle.js',
+    publicPath: ROOT_PATH,
+    clean: true
+  },
+  resolve: {
+   fallback: { "querystring": require.resolve("querystring-es3") }
+  },
   module: {
     rules: [
       {
@@ -97,4 +99,3 @@ module.exports = {
     }),
   ],
 }
-
