fix: adds new config section

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+# old config
 server {
     listen 80;
     server_name sealog-server;
@@ -5,5 +6,9 @@ server {
     location /sealog/ {
         alias /usr/src/app/;
         try_files $uri $uri/ /sealog/index.html;
+    }
+
+    location /config/ {
+        alias /config/;
     }
 }
