--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/whoigit/ndsf-sealog-client/issues"
   },
   "author": "Woods Hole Oceanographic Institution",
-  "homepage": ".",
+  "homepage": "/sealog",
   "private": true,
   "repository": {
     "type": "git",
