fix: adds coord_decimals to config dist

--- a/config/client_config.js.dist
+++ b/config/client_config.js.dist
@@ -71,4 +71,7 @@ window.client_config = {
         { name: "origin_y", label: "Origin Y", required: false },
     ],
 
+    // How many decimal places to use for coordinates
+    COORD_DECIMALS: 6,
+
 };
