--- a/src/map_tilelayers.js.dist
+++ b/src/map_tilelayers.js.dist
@@ -3,20 +3,21 @@ import { USE_MAPTILE_PROXY } from './client_config';
 export const TILE_LAYERS = (USE_MAPTILE_PROXY) ? [
 ] : [
   {
-    name: "Ocean Basemap",
-    attribution: 'Tiles &copy; Esri',
-    url: "https://server.arcgisonline.com/ArcGIS/rest/services/Ocean_Basemap/MapServer/tile/{z}/{y}/{x}",
+    name: "Carto Dark",
+    attribution:  '&copy <a href="http://www.openstreetmap.org/copyright" target="_blank" rel="noopener">OpenStreetMap</a> contributors, &copy <a href="https://carto.com/about-carto/">dark_all</a>',
+    url: "	http://basemaps.cartocdn.com/dark_all/{z}/{x}/{y}@2x.png",
     default: true
   },
   {
-    name: "OpenStreetMap",
-    attribution: '&amp;copy <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
-    url: "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+    name: "Carto Voyager",
+    attribution:  '&copy <a href="http://www.openstreetmap.org/copyright" target="_blank" rel="noopener">OpenStreetMap</a> contributors, &copy <a href="https://carto.com/about-carto/">dark_all</a>',
+    url: "	http://basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}@2x.png",
   },
   {
     name: "GMRT Basemap",
     wms: true,
     url: "https://www.gmrt.org/services/mapserver/wms_merc?map=/public/mgg/web/gmrt.marine-geo.org/htdocs/services/map/wms_merc.map&",
+    attribution:  '&copy 2023 <a href="http://gmrt.marine-geo.org" target="_blank" rel="noopener">GMRT</a>',
     layers: "topo",
     transparent: false
   }
