--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -25,6 +25,7 @@ const LOGIN_IMAGE = "";
 // Text show on the main page above the cruise list.
 const MAIN_SCREEN_HEADER = "Welcome to Sealog";
 
+// Text show on the main page above the cruise list.
 const MAIN_SCREEN_TXT = "Please select a cruise from the list below.  Once a cruise is selected please select a lowering from the list of lowerings associated with that cruise that appear at the bottom of the cruise information panel.  Selecting a lowering will open the lowering information panel.  At the bottom of the cruise information panel there will be links for proceeding to the lowering replay section, the lowering review section and the lowering gallery section of Sealog. If at any time you wish to return to this page please click the \"Review Cruises/Lowerings\" text in upper navigation bar.";
 
 // Title displayed on the left side of the title bar
@@ -48,37 +49,37 @@ const CRUISE_ID_PLACEHOLDER = "";
 // RegExp object to use when verifying CruiseID i.e. RegExp(/^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
 const CRUISE_ID_REGEX = null;
 
+// What to call "cruise/cruises", format: null OR ["single version","plural version"] use lowercase
+const CUSTOM_CRUISE_NAME = null;
+
 // Placeholder text displayed in LoweringID textfield "i.e. CHR0001"
 const LOWERING_ID_PLACEHOLDER = "";
 
 // RegExp object to use when verifying LoweringID i.e. RegExp(/^CHR[0-9]{4}$/)
 const LOWERING_ID_REGEX = null;
 
-// What to call "cruise/cruises", format: null OR ["single version","plural version"] use lowercase
-const CUSTOM_CRUISE_NAME = null;
-
 // What to call "lowering/lowerings", format: null OR ["single version","plural version"] use lowercase
 const CUSTOM_LOWERING_NAME = null;
 
 module.exports = {
   API_ROOT_URL,
-  WS_ROOT_URL,
-  ROOT_PATH,
-  IMAGE_PATH,
-  RECAPTCHA_SITE_KEY,
-  LOGIN_SCREEN_TXT,
-  LOGIN_IMAGE,
-  MAIN_SCREEN_HEADER,
-  MAIN_SCREEN_TXT,
-  HEADER_TITLE,
-  DEFAULT_VESSEL,
-  USE_MAPTILE_PROXY,
-  USE_ACCESS_CONTROL,
-  DISABLE_EVENT_LOGGING,
   CRUISE_ID_PLACEHOLDER,
   CRUISE_ID_REGEX,
-  LOWERING_ID_PLACEHOLDER,
-  LOWERING_ID_REGEX,
   CUSTOM_CRUISE_NAME,
   CUSTOM_LOWERING_NAME
+  DEFAULT_VESSEL,
+  DISABLE_EVENT_LOGGING,
+  HEADER_TITLE,
+  IMAGE_PATH,
+  LOGIN_IMAGE,
+  LOGIN_SCREEN_TXT,
+  LOWERING_ID_PLACEHOLDER,
+  LOWERING_ID_REGEX,
+  MAIN_SCREEN_HEADER,
+  MAIN_SCREEN_TXT,
+  RECAPTCHA_SITE_KEY,
+  ROOT_PATH,
+  USE_ACCESS_CONTROL,
+  USE_MAPTILE_PROXY,
+  WS_ROOT_URL,
 }
