--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-class-properties","@babel/transform-runtime"]
+  "plugins": [
+    "@babel/plugin-transform-class-properties",
+    "@babel/plugin-transform-runtime"
+  ]
 }
