--- a/Dockerfile.dist
+++ b/Dockerfile.dist
@@ -1,25 +1,34 @@
-# Use the latest Node.js Alpine image as the base image
-FROM node:alpine
+# Use an official Node runtime as a parent image
+FROM node:lts-alpine as build
 
-# Set the working directory in the container
+# Set the working directory to /app
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the working directory
+# Copy the package.json and package-lock.json to the container
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application code to the working directory
+# Copy the rest of the application code to the container
 COPY . .
+COPY src/client_config.js.dist ./src/client_config.js
+COPY webpack.config.js.dist ./webpack.config.js
 
-# Copy configuration files
-COPY webpack.config.js.dist webpack.config.js
-COPY src/client_config.js.dist src/client_config.js
-COPY src/map_tilelayers.js.dist src/map_tilelayers.js
+# Build the React app
+RUN npm run build
 
-# Expose port 8080 (This needs to match what's in the ./webpack.config.js file)
-# EXPOSE 8080
+# Use an official Nginx runtime as a parent image
+FROM nginx:stable-alpine
 
-# Command to run the Node.js application
-CMD [ "npm", "start" ]
+# Copy the ngnix.conf to the container
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy the React app build files to the container
+COPY --from=build /app/dist /usr/share/nginx/html/sealog
+
+# Expose port 80 for Nginx
+EXPOSE 80
+
+# Start Nginx when the container starts
+CMD ["nginx", "-g", "daemon off;"]
