--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -5,8 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - NODE_ENV=production
-    image: node:alpine
     ports:
-      - "8080:8080"
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
