--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --node-env development",
+    "start-devel": "concurrently \"npm run start\" \"npm run lint\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production --node-env production",
-    "lint": "eslint . --ext .js",
-    "lint-fix": "eslint . --ext .js --fix"
+    "lint": "eslint ./src --ext .js",
+    "lint-fix": "eslint ./src --ext .js --fix"
   },
   "author": "Webb Pinner",
   "homepage": "https://github.com/oceandatatools/",
@@ -34,15 +35,13 @@
     "filepond": "^4.31.1",
     "highcharts": "^9.3.3",
     "highcharts-react-official": "^3.2.1",
-    "immutable": "^3.8.2",
     "jquery": "^3.7.1",
     "js-file-download": "^0.4.12",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
     "path": "^0.12.7",
-    "popper.js": "^1.16.1",
-    "pretty-bytes": "^5.6.0",
+    "pretty-bytes": "^6.1.1",
     "rc-slider": "^9.7.5",
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.8",
@@ -60,38 +59,41 @@
     "redux-form": "^8.3.10",
     "redux-modal": "^4.0.0",
     "redux-thunk": "^2.4.2",
-    "seamless-immutable": "^7.1.4",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/core": "^7.24.5",
+    "@babel/eslint-parser": "^7.24.5",
+    "@babel/plugin-transform-class-properties": "^7.24.1",
     "@babel/plugin-transform-runtime": "^7.24.3",
-    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
-    "@babel/runtime": "^7.24.4",
-    "@fontsource/roboto": "^4.5.8",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.19",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.3.0",
-    "copy-webpack-plugin": "^9.1.0",
-    "css-loader": "^6.11.0",
-    "eslint": "^7.32.0",
+    "@babel/runtime": "^7.24.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@fortawesome/fontawesome-common-types": "^6.5.2",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-redux": "^3.3.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-redux": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
-    "process": "^0.11.10",
-    "sass": "^1.75.0",
+    "prettier": "3.2.5",
+    "sass": "^1.77.0",
     "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.4",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.2"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
