--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -1,56 +1,60 @@
-const Pkg = require('../package.json');
+const Pkg = require('../package.json')
 
 // Use https:// and wss:// for secure servers
-const API_ROOT_URL = (typeof window !== 'undefined') &&
-  `http://${window.location.hostname}:8000/sealog-server`;
-const WS_ROOT_URL = (typeof window !== 'undefined') &&
-  `ws://${window.location.hostname}:8000/ws`;
+const server_protocol = (process.env.SEALOG_SERVER_TLS && process.env.SEALOG_SERVER_TLS === 'true') ? 'https' : 'http' || 'http'
+const server_hostname = process.env.SEALOG_SERVER_HOSTNAME || typeof window !== 'undefined' && window.location.hostname
+const server_port = process.env.SEALOG_SERVER_PORT || 8000
+
+const API_ROOT_URL = `${server_protocol}://${server_hostname}:${server_port}/sealog-server`
+const WS_ROOT_URL = `${(server_protocol === 'https')? 'wss' : 'ws'}://${server_hostname}:${server_port}/WS`
 
 // Change this if not hosting the client at the webserver's document root i.e. '/sealog/'
-const ROOT_PATH = "/sealog/";
+const ROOT_PATH = process.env.SEALOG_ROOT_PATH || '/sealog/'
 
 // Where the images are hosted on the webserver.
-const IMAGE_PATH = "/files/images";
+const IMAGE_PATH = '/files/images'
 
 // Site customization
 // Add a reCaptcha site kit to enable recaptcha bot protection
-const RECAPTCHA_SITE_KEY = "";
+const RECAPTCHA_SITE_KEY = process.env.SEALOG_RECAPTCHA_SITE_KEY || ''
 
 // Text show on the login page.  If a login image is defined then this text will appear below the image.
-const LOGIN_SCREEN_TXT = "Sealog provides the Oceanographic Research community with an open-source tool for recording, reviewing, and exporting insitu scientific and operational observations.";
+const LOGIN_SCREEN_TXT =
+  'Sealog provides the Oceanographic Research community with an open-source tool for recording, reviewing, and exporting insitu scientific and operational observations.'
 
 // Image file shown on the login page.  This image needs to be saved in the ./dist/images folder
-const LOGIN_IMAGE = "";
+const LOGIN_IMAGE = ''
 
 // Text show on the main page above the cruise list.
-const MAIN_SCREEN_HEADER = "Welcome to Sealog";
+const MAIN_SCREEN_HEADER = 'Welcome to Sealog'
 
 // Text show on the main page above the cruise list.
-const MAIN_SCREEN_TXT = "Please select a cruise from the list below.  Once a cruise is selected please select a lowering from the list of lowerings associated with that cruise that appear at the bottom of the cruise information panel.  Selecting a lowering will open the lowering information panel.  At the bottom of the cruise information panel there will be links for proceeding to the lowering replay section, the lowering review section and the lowering gallery section of Sealog. If at any time you wish to return to this page please click the \"Review Cruises/Lowerings\" text in upper navigation bar.";
+const MAIN_SCREEN_TXT =
+  'Please select a cruise from the list below.  Selecting a cruise will open the cruise information panel.  At the bottom of the cruise information panel there will be links for proceeding to the cruise replay section, the cruise review section and the cruise gallery section of Sealog. If at any time you wish to return to this page please click the "Review Cruises" text in upper navigation bar.'
 
 // Title displayed on the left side of the title bar
-const HEADER_TITLE = `Sealog for Vehicles v${Pkg.version}`;
+const HEADER_TITLE = `Sealog for Vessels v${Pkg.version}`
 
 // Set default vessel
-const DEFAULT_VESSEL = "";
+const DEFAULT_VESSEL = 'R/V Discovery'
 
 // Use an internal tile server (true), or pull tiles directly from the Internet (false).
-const USE_MAPTILE_PROXY = false;
+const USE_MAPTILE_PROXY = false
 
 // Add cruise-level and lowering-level authentication. This needs to match the 'useAccessControl' setting on the sealog-server.
-const USE_ACCESS_CONTROL = false;
+const USE_ACCESS_CONTROL = true
 
 // Remove ability to add new events
-const DISABLE_EVENT_LOGGING = false;
+const DISABLE_EVENT_LOGGING = false
 
 // Placeholder text displayed in CruiseID textfield "i.e. OXR20210101"
-const CRUISE_ID_PLACEHOLDER = "";
+const CRUISE_ID_PLACEHOLDER = ''
 
 // RegExp object to use when verifying CruiseID i.e. RegExp(/^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
-const CRUISE_ID_REGEX = null;
+const CRUISE_ID_REGEX = RegExp(/^AT[0-9]{2}-[0-9]{2}$/)
 
 // What to call "cruise/cruises", format: null OR ["single version","plural version"] use lowercase
-const CUSTOM_CRUISE_NAME = null;
+const CUSTOM_CRUISE_NAME = null
 
 // Placeholder text displayed in LoweringID textfield "i.e. CHR0001"
 const LOWERING_ID_PLACEHOLDER = "";
@@ -59,27 +63,39 @@ const LOWERING_ID_PLACEHOLDER = "";
 const LOWERING_ID_REGEX = null;
 
 // What to call "lowering/lowerings", format: null OR ["single version","plural version"] use lowercase
-const CUSTOM_LOWERING_NAME = null;
+const CUSTOM_LOWERING_NAME = ["dive","dives"];
+
+const POSITION_DATASOURCES = ['vehicleRealtimeNavData']
+
+const EXCLUDE_AUX_DATA_SOURCES = []
+
+const IMAGES_AUX_DATA_SOURCES = ['vehicleRealtimeFramegrabberData']
+
+const AUX_DATA_SORT_ORDER = ['vehicleRealtimeNavData']
 
 module.exports = {
   API_ROOT_URL,
+  WS_ROOT_URL,
+  ROOT_PATH,
+  IMAGE_PATH,
+  RECAPTCHA_SITE_KEY,
+  LOGIN_SCREEN_TXT,
+  LOGIN_IMAGE,
+  MAIN_SCREEN_HEADER,
+  MAIN_SCREEN_TXT,
+  HEADER_TITLE,
+  DEFAULT_VESSEL,
+  USE_MAPTILE_PROXY,
+  USE_ACCESS_CONTROL,
+  DISABLE_EVENT_LOGGING,
   CRUISE_ID_PLACEHOLDER,
   CRUISE_ID_REGEX,
   CUSTOM_CRUISE_NAME,
-  CUSTOM_LOWERING_NAME
-  DEFAULT_VESSEL,
-  DISABLE_EVENT_LOGGING,
-  HEADER_TITLE,
-  IMAGE_PATH,
-  LOGIN_IMAGE,
-  LOGIN_SCREEN_TXT,
   LOWERING_ID_PLACEHOLDER,
   LOWERING_ID_REGEX,
-  MAIN_SCREEN_HEADER,
-  MAIN_SCREEN_TXT,
-  RECAPTCHA_SITE_KEY,
-  ROOT_PATH,
-  USE_ACCESS_CONTROL,
-  USE_MAPTILE_PROXY,
-  WS_ROOT_URL,
+  CUSTOM_LOWERING_NAME,
+  POSITION_DATASOURCES,
+  EXCLUDE_AUX_DATA_SOURCES,
+  IMAGES_AUX_DATA_SOURCES,
+  AUX_DATA_SORT_ORDER
 }
