--- a/nginx/nginx.conf.dist
+++ b/nginx/nginx.conf.dist
@@ -1,11 +1,11 @@
 server {
     listen 80;
     server_name localhost;
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/sealog;
     index index.html;
 
-    location /sealog/ {
+    location / {
         include  /etc/nginx/mime.types;
-        try_files $uri $uri/ /sealog/index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
