--- a/Dockerfile.dist
+++ b/Dockerfile.dist
@@ -13,6 +13,7 @@ RUN npm install
 # Copy the rest of the application code to the container
 COPY . .
 COPY src/client_config.js.dist ./src/client_config.js
+COPY src/map_tilelayers.js.dist ./src/map_tilelayers.js
 COPY webpack.config.js.dist ./webpack.config.js
 
 # Build the React app
@@ -22,7 +23,7 @@ RUN npm run build
 FROM nginx:stable-alpine
 
 # Copy the ngnix.conf to the container
-COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf.dist /etc/nginx/conf.d/default.conf
 
 # Copy the React app build files to the container
 COPY --from=build /app/dist /usr/share/nginx/html/sealog
