Continued reshuffling of file names and variables to improve consistency

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ package-lock.json
 /dist
 
 # CLient Config
-/src/client_config.js
+/src/client_settings.js
 
 # Maptime Config
 /src/map_tilelayers.js
