Library update, fixed bad in resetPassword URL

--- a/webpack.config.js.dist
+++ b/webpack.config.js.dist
@@ -95,4 +95,9 @@ module.exports = {
       ]
     }),
   ],
+  resolve: {
+    fallback: {
+      'process/browser': require.resolve('process/browser'),
+    }
+  }
 }
