--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sealog-client-vehicle",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "license": "MIT",
   "description": "Sealog Client intended for use with vehicles deployed from research vessels such as ROVs, AUVs and HOVs",
   "bugs": {
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "@hapi/nes": "^13.0.1",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "bootstrap": "^4.6.2",
     "connected-react-router": "^6.9.3",
     "filepond": "^4.31.1",
@@ -89,7 +89,7 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "3.2.5",
-    "sass": "^1.77.6",
+    "sass": "1.77.6",
     "sass-loader": "^12.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
