--- a/config/client_config.js.dist
+++ b/config/client_config.js.dist
@@ -1,8 +1,10 @@
 window.client_config = {
 
-    // Use https:// and wss:// for secure servers
-    API_ROOT_URL:  `http://${window.location.hostname}:8000/sealog-server`,
-    WS_ROOT_URL:  `ws://${window.location.hostname}:8000/ws`,
+    // API URLs - use relative paths in development (proxied by dev server)
+    // In production, nginx proxies these paths to the backend
+    // For development with backend on different port, use: `http://${window.location.hostname}:8000/sealog-server`
+    API_ROOT_URL:  `${window.location.protocol}//${window.location.host}/sealog-server`,
+    WS_ROOT_URL:  `${window.location.protocol === 'https:' ? 'wss:' : 'ws:'}//${window.location.host}/ws`,
 
     // Derive the path at which Sealog is being hosted. This assumes that the
     // current executing script is ROOT_PATH/config/client_config.js
